# pico_lcd_demo

./: CMakeLists.txt  test_lcd_1602_i2c_demo.c
